@@ -25,6 +25,8 @@ $_lang['setting_ms2gallery_placeholders_tpl'] = 'Шаблон плейсхолд
 $_lang['setting_ms2gallery_placeholders_tpl_desc'] = 'Укажите имя ТВ параметра или чанка, для оформления вывода плейсхолдеров типа [[+ms2g.0]], [[+ms2g.1]] на странице. ТВ параметр должен быть назначен ресурсу, иначе будет использован чанк с тем же именем. Если ТВ и чанк не существуют или пусты, то вы получите распечатанный массив с данными изображения в этом плейсхолдере.';
 $_lang['setting_ms2gallery_placeholders_thumbs'] = 'Превью для плейсхолдеров';
 $_lang['setting_ms2gallery_placeholders_thumbs_desc'] = 'Укажите список размеров превью через запятую, которые нужно выбирать для выставления в плейсхолдеры. Например, "120х90,360x270".';
+$_lang['setting_ms2gallery_placeholders_for_templates'] = 'Плейсхолдеры для шаблонов';
+$_lang['setting_ms2gallery_placeholders_for_templates_desc'] = 'Укажите список id шаблонов через запятую, для которых нужно выставлять плейсхолдеры с изображениями. Если пусто, то плейсхолдеры выставляются для всех ресурсов.';
 
 $_lang['setting_ms2gallery_page_size'] = 'Файлов на странице';
 $_lang['setting_ms2gallery_page_size_desc'] = 'Вы можете задать количество выводимых файлов на странице, по умолчанию 20. 0 - вывести все.';
